<resources>
    <string name="app_name">Client Sample App</string>
    <string name="my_account">MY ACCOUNT</string>
    <string name="settings">Settings</string>
    <string name="more_information">MORE INFORMATION</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="app_settings">App Settings</string>
    <string name="account_actions">ACCOUNT ACTIONS</string>
    <string name="delete_account">Delete Account</string>
    <string name="log_out">Log Out</string>
    <string name="edit_icon">Edit Icon</string>
    <string name="_1234657890">1234657890</string>
    <string name="sample_name">Sample Name</string>
    <string name="friends">Friends</string>
    <string name="presence">Presence</string>
    <string name="match_phone_contacts">Match Phone Contacts</string>
    <string name="pending_requests">Pending Requests</string>
    <string name="blocked_users">Blocked Users</string>
    <string name="enter_sms_code">Enter SMS code</string>
    <string name="submit">Submit</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="manually_set_presence">Manually set presence</string>
    <string name="map">Map</string>
    <string name="invite">Invite</string>
    <string name="what_is_your_phone_number">What is your phone number?</string>
    <string name="phone_number_is_used">Phone number is used to login and to make it easy for your contacts to find you. Message and date rates may apply.</string>
    <string name="enter_your_phone_number_here">Enter your phone number here</string>
    <string name="new_user_sign_up">New user sign up</string>
    <string name="choose_a_username_and_enter_your_name">Choose a username and enter your name so your friends can find you and connect when you are both at the Fiserv Forum.</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="connect_to_your_phone_contacts">Connect to your phone contacts</string>
    <string name="contacts_are_used">Contacts are used to quickly find your friends by their phone number.</string>
    <string name="allow_access_to_contacts">Allow Access To Contacts</string>
    <string name="one_time_code_sent_to">One Time Code sent to %s</string>
    <string name="enter_the_code_here_to_login">Enter the code here to login.</string>
    <string name="change_map">Change Map</string>
    <string name="back">Back</string>
    <string name="ok">OK</string>
    <string name="choose_a_map">Choose a Map</string>
    <string name="connect_with_your_contacts">Connect with your Contacts</string>
    <string name="send">Send</string>
    <string name="send_friend_request">Send Friend Request</string>
    <string name="do_you_want_to_send_a_friend_request_to">Do you want to send a friend request to %1$s?</string>
    <string name="request_sent">Request Sent</string>
    <string name="profile">Profile</string>
    <string name="save">Save</string>
    <string name="adjust_permissions">Adjust permissions</string>
    <string name="system_settings">System settings</string>
    <string name="manage_blocked_users">Manage blocked users</string>
</resources>