<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/new_user_sign_up"
        android:textColor="?attr/textColorPrimary"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/choose_a_username_and_enter_your_name"
        android:textColor="?attr/textColorPrimary"
        android:textSize="12sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:hint="@string/username"
        android:textColorHint="?attr/colorDisabledDark"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:cursorColor="?attr/textColorPrimary"
        app:hintTextColor="?attr/colorDisabledDark">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/secondary_disabled_border"
            android:inputType="textPersonName"
            android:textColor="?attr/textColorPrimary"
            tools:text="User" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/name"
        android:textColorHint="?attr/colorDisabledDark"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:cursorColor="?attr/textColorPrimary"
        app:hintTextColor="?attr/colorDisabledDark">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/secondary_disabled_border"
            android:inputType="textPersonName"
            android:textColor="?attr/textColorPrimary"
            tools:text="Name" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submit_button"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/positive_button_background_selector"
        android:enabled="false"
        android:text="@string/submit"
        android:textColor="@color/positive_button_text_color" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/connect_to_your_phone_contacts"
        android:textColor="?attr/textColorPrimary"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:text="@string/contacts_are_used"
        android:textColor="?attr/textColorPrimary"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/contacts_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/allow_access_to_contacts"
            android:textColor="?attr/textColorPrimary"
            android:textSize="17sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>