<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/settings_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:text="@string/profile"
        android:paddingVertical="20sp"
        android:textSize="17sp"
        android:textStyle="bold"
        android:textColor="?attr/colorPrimaryDark"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/account_title"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginHorizontal="25dp"
        android:text="@string/username"
        android:textColor="?attr/colorPrimaryDark"
        android:textSize="17dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/settings_title"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/account_info"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintTop_toBottomOf="@+id/account_title"
        android:background="@drawable/rounded_corners"
        >

        <EditText
            android:id="@+id/user_name"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="15dp"
            android:text=""
            android:textColor="@color/black"
            android:background="@drawable/settings_fields_corners"
            app:layout_constraintWidth_percent="0.8"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="25dp"
            android:text="@string/name"
            android:textColor="?attr/colorPrimaryDark"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/user_name"/>

        <EditText
            android:id="@+id/account_name"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="15dp"
            android:text=""
            android:textColor="@color/black"
            android:background="@drawable/settings_fields_corners"
            app:layout_constraintWidth_percent="0.8"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/save_changes"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:background="@drawable/negative_button_background_selector"
        android:text="@string/save"
        android:textColor="@color/negative_button_text_color"
        android:layout_marginBottom="26dp"
        app:layout_constraintTop_toBottomOf="@id/account_info"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/blocked_user_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        app:layout_constraintTop_toBottomOf="@+id/save_changes"
        android:background="@drawable/rounded_corners"
        >

        <TextView
            android:id="@+id/blocked_users"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_margin="15dp"
            android:text="@string/blocked_users"
            android:textColor="?attr/colorPrimaryDark"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/blocked_user_container" />

        <TextView
            android:id="@+id/manage_blocked_users"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/bottom_border_black"
            android:text="@string/manage_blocked_users"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="?attr/textColorPrimary"
            app:layout_constraintTop_toBottomOf="@id/blocked_users"
            app:layout_constraintLeft_toLeftOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/more_options"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        app:layout_constraintTop_toBottomOf="@+id/blocked_user_container"
        android:background="@drawable/rounded_corners"
        >

        <TextView
            android:id="@+id/adjust_permissions"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_margin="15dp"
            android:text="@string/adjust_permissions"
            android:textColor="?attr/colorPrimaryDark"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/more_options" />

        <TextView
            android:id="@+id/system_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/bottom_border_black"
            android:text="@string/system_settings"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="?attr/textColorPrimary"
            app:layout_constraintTop_toBottomOf="@id/adjust_permissions"
            app:layout_constraintLeft_toLeftOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


<!--    <TextView-->
<!--        android:id="@+id/account_actions_title"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="20dp"-->
<!--        android:layout_marginHorizontal="25dp"-->
<!--        android:layout_marginTop="30dp"-->
<!--        android:text="@string/account_actions"-->
<!--        android:textSize="12sp"-->
<!--        app:layout_constraintTop_toBottomOf="@id/more_options"/>-->


<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
<!--        android:id="@+id/account_actions"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="0dp"-->
<!--        android:layout_marginHorizontal="10dp"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/account_actions_title"-->
<!--        android:background="@drawable/rounded_corners"-->
<!--        >-->

<!--        <TextView-->
<!--            android:id="@+id/delete_account"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="20dp"-->
<!--            android:layout_margin="15dp"-->
<!--            app:layout_constraintTop_toTopOf="@id/account_actions"-->
<!--            android:text="@string/delete_account"-->
<!--            android:textColor="#FF0000"-->
<!--            />-->

<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_out"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:background="@drawable/negative_button_background_selector"
        android:text="@string/log_out"
        android:textColor="@color/negative_button_text_color"
        android:layout_marginBottom="26dp"
        app:layout_constraintBottom_toTopOf="@id/back_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/back_button"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:background="@drawable/positive_button_background_selector"
        android:text="@string/back"
        android:textColor="@color/positive_button_text_color"
        android:layout_marginBottom="26dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>
